<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment"
        android:id="@+id/tableView">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:stretchColumns="0">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="56dp" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

            <Button
                    android:text="@string/lights_Title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/lights_button"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/fishing_boat_50"
                    android:layout_marginRight="5dp"
                    android:textColor="#FFFFFF" />

            <Button
                    android:text="@string/shapes_Title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/shapes_button"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/moored_boat_50"
                    android:layout_marginLeft="5dp"
                    android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

            <Button
                    android:text="@string/sounds_Title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/sounds_button"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/horn"
                    android:layout_marginRight="5dp"
                    android:textColor="#FFFFFF" />

            <Button
                    android:text="@string/buoys_Title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/buoys_button"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/buoys"
                    android:layout_marginLeft="5dp"
                    android:textColor="#FFFFFF" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

            <Button
                    android:text="@string/flags_Title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/flags_button"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/flag_black"
                    android:layout_marginRight="5dp"
                    android:textColor="#FFFFFF" />

            <Button
                    android:text="@string/map_Title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/map_button"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/map"
                    android:layout_marginLeft="5dp"
                    android:textColor="#FFFFFF" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>